--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -21,19 +21,23 @@ body {
 }
 
 @layer base {
-  a {
-    @apply cursor-default;
-  }
-
   a.hl {
-    @apply underline decoration-dotted hover:decoration-solid;
+    @apply underline decoration-dotted hover:decoration-solid transition-all;
   }
 
   input {
-    @apply bg-black ring-zinc-50 ring-1 m-1 pl-1 pt-1 pb-1 leading-5 focus:border-none focus:outline-none focus:ring-2;
+    @apply bg-black ring-zinc-50 ring-1 p-1.5 leading-5 focus:border-none focus:outline-none focus:ring-2 ring-inset font-semibold indent-1;
+  }
+  input::placeholder {
+    @apply text-zinc-300 text-md;
   }
 
   img {
     @apply pointer-events-none;
+  }
+
+  button {
+    @apply hover:bg-zinc-50 hover:text-black transition-all;
+    @apply ring-zinc-50 ring-1 ring-inset pt-0.5 pb-0.5 pl-1.5 pr-1.5 cursor-default;
   }
 }
