--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -17,7 +17,7 @@ body {
 }
 
 ::selection {
-  @apply bg-zinc-500;
+  @apply bg-zinc-400;
 }
 
 @layer base {
@@ -39,5 +39,17 @@ body {
   button {
     @apply hover:bg-zinc-50 hover:text-black transition-all;
     @apply ring-zinc-50 ring-1 ring-inset pt-0.5 pb-0.5 pl-1.5 pr-1.5 cursor-default;
+  }
+
+  #grid-bg {
+    @apply absolute bottom-0 left-0 w-full h-full bg-[url(/grid.png)] bg-repeat;
+
+    image-rendering: pixelated;
+    mask-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.04) 0%,
+      rgba(0, 0, 0, 0.02) 60%,
+      rgba(0, 0, 0, 0) 100%
+    );
   }
 }
