--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -41,8 +41,8 @@ body {
     @apply ring-zinc-50 ring-1 ring-inset pt-0.5 pb-0.5 pl-1.5 pr-1.5 cursor-default;
   }
 
-  #grid-bg {
-    @apply absolute bottom-0 left-0 w-full h-full bg-[url(/grid.png)] bg-repeat;
+  #bg {
+    @apply fixed bottom-0 left-0 w-full h-full bg-[url(/grid.png)] bg-repeat;
 
     image-rendering: pixelated;
     mask-image: linear-gradient(
